ext/envoy.yaml
# see https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/edge
# https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/level_two
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  clusters:
    - name: auth_server
      type: STATIC
      load_assignment:
        cluster_name: auth_server
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 20000

    - name: bookshop
      type: STATIC
      load_assignment:
        cluster_name: bookshop
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 20001

    - name: envoyj
      type: STATIC
      http2_protocol_options: { }
      load_assignment:
        cluster_name: envoyj
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 20002

  listeners:
    - name: http
      address:
        socket_address: { address: 127.0.0.1, port_value: 20080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                # select http1.1 http2 http3 automatically
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: auth
                      domains: ["auth.salpt.rs"]
                      routes:
                          match: { prefix: ''}
                          route: { cluster: auth_server }

                    - name: bookshop
                      domains: ["bookshop.salpt.rs"]
                      routes:
                        match: { prefix: ''}
                        route: { cluster: bookshop }


                http_filters:
                  # cookie compression
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                      grpc_service:
                        envoy_grpc:
                          cluster_name: envoyj

                  - name: envoy.filters.http.oauth2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
                      config:
                        token_endpoint:
                          cluster: auth_server
                          uri: http://auth.salpt.rs/oauth2/token
                          timeout: 3s
                        authorization_endpoint: https://auth.salpt.rs/oauth2/authorize
                        redirect_uri: "https://%REQ(:authority)%/callback"
                        redirect_path_matcher:
                          path:
                            exact: /callback
                        signout_path:
                          path:
                            exact: /signout

                        pass_through_matcher:
                          - name: ':authority'
                            string_match:
                              exact: 'auth.salpt.rs'
                        credentials:
                          client_id: bookshop
                          token_secret:
                            name: token
                            sds_config:
                              path_config_source:
                                path: "ext/token-secret.yaml"
                          hmac_secret:
                            name: hmac
                            sds_config:
                              path_config_source:
                                path: "ext/hmac-secret.yaml"
                        auth_scopes:
                          - openid
                          - profile
                          - user
                          - email
                        forward_bearer_token: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
